# asus-5606-fan-state

./: Cargo.toml  README.md  asus-fan-permissions.service  fan_state  fan_state.service  flake.nix  install.sh
.github/actions/: release.yml
.github/workflows/: release.yml
src/: main.rs
